# cogFree

./: .env.backup  .env.example  README.md  main.py  pyproject.toml  requirements.txt  test_api.py  test_single_prompt.py
app/: __init__.py
app/api/: chat.py
app/core/: config.py
app/models/: chat.py
app/services/: json_parser.py  openrouter_service.py  prompt_service.py
examples/: simple_client.py
tests/: test_chat.py
